move to root to further simplify

--- a/apprunner.yaml
+++ b/apprunner.yaml
@@ -3,6 +3,6 @@ runtime: python3
 build:
   commands:
     build:
-      - cd src && pip install -r requirements.txt
+      - pip install -r requirements-app.txt
 run:
-  command: cd src && python server.py
+  command: python server.py
