--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,26 @@
+asgiref==3.5.2
 attrs==22.1.0
 aws-cdk-lib==2.50.0
 aws-cdk.aws-apprunner-alpha==2.50.0a0
 cattrs==22.2.0
 constructs==10.1.159
+Django==4.1.3
 exceptiongroup==1.0.2
+gunicorn==20.1.0
+hupper==1.10.3
 jsii==1.71.0
+PasteDeploy==3.0.1
+plaster==1.1
+plaster-pastedeploy==1.0.1
 publication==0.0.3
+pyramid==2.0
 python-dateutil==2.8.2
 six==1.16.0
+sqlparse==0.4.3
+translationstring==1.4
 typeguard==2.13.3
 typing_extensions==4.4.0
+venusian==3.0.0
+WebOb==1.8.7
+zope.deprecation==4.4.0
+zope.interface==5.5.1
